--- a/027.EventMouse/10/index.html
+++ b/027.EventMouse/10/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+
+    <button id="unb">Unblock</button>
+    <button id="bl">Block</button>
+    <input type="text" value="">
     <script src="./a.js"></script>
 
 </body>
