--- a/027.EventMouse/11/index.html
+++ b/027.EventMouse/11/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+    <button>CLick</button>
+    <input type="text" value="" id="first">
+    <input type="text" value="" id="second">
     <script src="./a.js"></script>
 
 </body>
+
 </html>
