--- a/027.EventMouse/5/index.html
+++ b/027.EventMouse/5/index.html
@@ -8,7 +8,7 @@
 <body>
     <button>click</button>
     <input type="text" value="">
-    <p></p>
+    <p>Result: </p>
     <script src="./a.js"></script>
 
 </body>
