edit 031 tasks,not fin

--- a/031.Proto/7/index.html
+++ b/031.Proto/7/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <input type="text" name="" id="first">
+    <input type="text" name="" id="second">
+    <input type="text" name="" id="third">
+    <button>+++++</button>
     <script src="./a.js"></script>
 
 </body>
