--- a/031.Proto/13/index.html
+++ b/031.Proto/13/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./a.js"></script>
+    <input type="text" name="" id="">
+    <button>+++++</button>
+    <p></p>
 
+    <script src="./a.js"></script>
 </body>
 </html>
