--- a/033.Solid/8/index.html
+++ b/033.Solid/8/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <input type="text">
+    <button>+++++++++</button>
+    <p></p>
     <script src="./a.js"></script>
 
 </body>
