--- a/036/1/index.html
+++ b/036/1/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <input type="text" class="email">
-    <input type="text" class="pwd">
-    <button>+++++++++</button>
+    <ul>
+        <li>Raz</li>
+        <li>Dwa</li>
+        <li>Trzy</li>
+        <li>Cztery</li>
+        <li>Piec</li>
+    </ul>
     <p></p>
     <script src="./a.js"></script>
-
 </body>
+
 </html>
