--- a/036/4/index.html
+++ b/036/4/index.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" class="email">
-    <input type="text" class="pwd">
-    <button>+++++++++</button>
+    <button id="btn">Click</button>
     <p></p>
     <script src="./a.js"></script>
 
