--- a/036/5/index.html
+++ b/036/5/index.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" class="email">
-    <input type="text" class="pwd">
-    <button>+++++++++</button>
+    <button>click</button>
+    <input type="text" name="" id="">
     <p></p>
     <script src="./a.js"></script>
 
