--- a/036/6/index.html
+++ b/036/6/index.html
@@ -6,10 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" class="email">
-    <input type="text" class="pwd">
-    <button>+++++++++</button>
-    <p></p>
+<button>Click</button>
+    <input  type="text" value="" placeholder="elem">
+  <p></p>
     <script src="./a.js"></script>
 
 </body>
