--- a/036/7/index.html
+++ b/036/7/index.html
@@ -6,10 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" class="email">
-    <input type="text" class="pwd">
-    <button>+++++++++</button>
-    <p></p>
+<button> +++++++++++++</button>
+<input type="text" name="" id="">
+    <p class="first">m</p>
+    <p class="second">m</p>
+
     <script src="./a.js"></script>
 
 </body>
