--- a/036/9/index.html
+++ b/036/9/index.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" class="email">
-    <input type="text" class="pwd">
-    <button>+++++++++</button>
+    <button>Click</button>
+    <div></div>
     <p></p>
     <script src="./a.js"></script>
 
