--- a/036/15/index.html
+++ b/036/15/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" class="email">
-    <input type="text" class="pwd">
-    <button>+++++++++</button>
+
+    <button>CLick</button>
+    <input type="text" value="">
     <p></p>
     <script src="./a.js"></script>
 
