--- a/036/3/index.html
+++ b/036/3/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <input type="text" class="email">
-    <input type="text" class="pwd">
-    <button>+++++++++</button>
-    <p></p>
+    <button>Показать</button>
+    <p>HI</p>
     <script src="./a.js"></script>
 
 </body>
+
 </html>
