--- a/047.ProjectPatterns/4/index.html
+++ b/047.ProjectPatterns/4/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <button id="btn">Click</button>
-    <input type="text" name="" id="login">
-    <input type="text" name="" id="pwd">
+    <input type="text" name="" id="raz">
+    <input type="text" name="" id="dwa">
+    <input type="text" name="" id="tri">
     <p></p>
     <script src="./a.js"></script>
 
