--- a/047.ProjectPatterns/5/index.html
+++ b/047.ProjectPatterns/5/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<style>
+    img {
+        width: 20%;
+        height: 20%;
+    }
+</style>
+
 <body>
-    <button id="btn">Click</button>
-    <input type="text" name="" id="login">
-    <input type="text" name="" id="pwd">
+    <img src="../../../../Снимок экрана 2023-10-24 213557.png" alt="">
     <script src="./a.js"></script>
 
 </body>
+
 </html>
