--- a/047.ProjectPatterns/6/index.html
+++ b/047.ProjectPatterns/6/index.html
@@ -8,8 +8,8 @@
 <body>
 <button> +++++++++++++</button>
 <input type="text" name="" id="">
-    <p class="first">m</p>
-    <p class="second">m</p>
+    <p class="first"></p>
+    <p class="second"></p>
 
     <script src="./a.js"></script>
 
