--- a/046.SecRepeat/7/index.html
+++ b/046.SecRepeat/7/index.html
@@ -6,11 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-<button> +++++++++++++</button>
-<input type="text" name="" id="">
-    <p class="first">m</p>
-    <p class="second">m</p>
-
+    <button id="btn">Click</button>
+    <input type="text" name="" id="login">
+    <input type="text" name="" id="pwd">
     <script src="./a.js"></script>
 
 </body>
